# pps-video-mirror-server

./: .clang-format  .editorconfig  CMakeLists.txt  GenVSSolution.bat  README.md
cmake/: FindNvVideoCodecSDK.cmake
src/server/: CMakeLists.txt  log.cpp  log.h  main_win.cpp  nvenc.cpp  nvenc.h  pch.h  resources.aps  resources.rc  trace_logging.cpp  trace_logging.h  version.h
src/server/NvEncoder/: LICENSE.txt  NvEncoder.cpp  NvEncoder.h  RGBToNV12ConverterD3D11.h
src/server/streaming/: streaming.h  webrtc.cpp  webrtc.h
src/server/video_input/: device.h  media_foundation.cpp  media_foundation.h
src/server/www/: index.html
utils/tracing/: tracing_profile.wprp
